--- a/examples/index.html
+++ b/examples/index.html
@@ -10,8 +10,9 @@
 <body>
 <div class="content-box">
     <div class="content">
-        <div class="content-item">
+        <div class="content-item left-content">
             <button class="button" id="start">开始识别</button>
+            <div class="connecting display-none" id="connecting">建立连接中...</div>
             <span class="recognizing display-none" id="recognizing">识别中...</span>
             <button class="button end-btn" id="end">结束识别</button>
         </div>
