--- a/examples/demo1.html
+++ b/examples/demo1.html
@@ -12,6 +12,7 @@
     <div class="content">
         <div class="content-item">
             <button class="button" id="start">开始识别</button>
+            <div class="connecting display-none" id="connecting">建立连接中...</div>
             <span class="recognizing display-none" id="recognizing">识别中...</span>
             <button class="button end-btn" id="end">结束识别</button>
         </div>
