--- a/soe/example/index.html
+++ b/soe/example/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./TencentSOE-1.0.0.js" type="module"></script>
+    <script src="./TencentSOE-1.0.1.js" type="module"></script>
 </head>
 <body>
     <button id="start">开始录音</button>
     <button id="stop">结束录音</button>
+    <button id="down">下载日志</button>
     <script src="./index.js"></script>
 </body>
 </html>
